--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     ]
   },
   "devDependencies": {
+    "@redwoodjs/cli-storybook-vite": "8.2.0",
     "@redwoodjs/core": "8.2.0",
     "@redwoodjs/project-config": "8.2.0",
     "prettier-plugin-tailwindcss": "^0.5.12"
