--- a/web/package.json
+++ b/web/package.json
@@ -15,10 +15,12 @@
     "@redwoodjs/router": "8.2.0",
     "@redwoodjs/web": "8.2.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
     "@redwoodjs/vite": "8.2.0",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "autoprefixer": "^10.4.20",
